# Growtrics-Home-Assessment

./: README.md  behavioural_questions.md
src/: defined_apis.json
src/backend/: .gitignore  README.md  REFACTORING.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
src/backend/config/: config.py
src/backend/core/: app.py  dependencies.py  lifespan.py
src/backend/docs/: AI_PROVIDERS.md  DEPENDENCIES_GUIDE.md  GITIGNORE_SETUP.md  UV_MIGRATION.md
src/backend/models/: homework_models.py
src/backend/routes/: health.py  homework.py  providers.py
src/backend/samples/: demo_homework.txt
src/backend/scripts/: test_with_uv.py
src/backend/services/: firebase_service.py  math_solver_service.py  ocr_service.py
src/backend/services/ai_providers/: __init__.py  base_provider.py  gemini_provider.py  mock_provider.py  openai_provider.py  provider_factory.py
src/backend/test/: test_api.py  test_providers.py
src/backend/utils/: file_utils.py
src/frontend/: FEATURES.md  README.md  analysis_options.yaml  pubspec.yaml
src/frontend/android/app/: build.gradle.kts
src/frontend/android/app/src/main/: AndroidManifest.xml
src/frontend/android/app/src/main/kotlin/com/example/homework_solver/: MainActivity.kt
src/frontend/ios/Runner/: Info.plist
src/frontend/ios/Runner.xcodeproj/: project.pbxproj
src/frontend/lib/: main.dart
src/frontend/lib/models/: homework_models.dart  homework_models.g.dart
src/frontend/lib/screens/: history_screen.dart  home_screen.dart  solution_screen.dart  solving_screen.dart  upload_screen.dart
src/frontend/lib/services/: api_service.dart  camera_service.dart
src/frontend/lib/utils/: app_theme.dart  constants.dart  helpers.dart
src/frontend/lib/widgets/: error_dialog.dart  expandable_card.dart  homework_card.dart  loading_dialog.dart  question_card.dart
src/frontend/test/: widget_test.dart
src/frontend/web/: index.html  manifest.json
